--- a/DespuesDeLaPrueba/Frontend_Despues _de_la_Prueba/package.json
+++ b/DespuesDeLaPrueba/Frontend_Despues _de_la_Prueba/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
@@ -27,9 +32,13 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "css-transform": "^1.0.0",
     "eslint": "^9.23.0",
     "eslint-config-vuetify": "^4.0.0",
+    "jsdom": "^26.1.0",
     "npm-run-all2": "^7.0.2",
     "pinia": "^3.0.1",
     "sass-embedded": "^1.86.3",
@@ -40,7 +49,8 @@
     "unplugin-vue-router": "^0.12.0",
     "vite": "^6.2.2",
     "vite-plugin-vue-layouts-next": "^0.0.8",
-    "vite-plugin-vuetify": "^2.1.1",
+    "vite-plugin-vuetify": "^2.1.2",
+    "vitest": "^3.2.4",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.8"
   }
